[gd_scene load_steps=13 format=3 uid="uid://cboi8hec4yf0c"]

[ext_resource type="Script" uid="uid://djrd7f7eccwpa" path="res://scripts/player.gd" id="1_7msvu"]
[ext_resource type="Texture2D" uid="uid://dgbvvcrkn8jtl" path="res://assets/tilemap.png" id="2_erru1"]
[ext_resource type="Texture2D" uid="uid://bqk6ftx0gnyje" path="res://assets/particles.png" id="3_particles"]
[ext_resource type="AudioStream" uid="uid://cxsjqbr8qhber" path="res://assets/jump.wav" id="3_brij0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("2_erru1")
region = Rect2(85, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_usmjv"]
atlas = ExtResource("2_erru1")
region = Rect2(0, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_erdcl"]
atlas = ExtResource("2_erru1")
region = Rect2(68, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wma1"]
atlas = ExtResource("2_erru1")
region = Rect2(17, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4kit"]
atlas = ExtResource("2_erru1")
region = Rect2(34, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnsu8"]
atlas = ExtResource("2_erru1")
region = Rect2(51, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_erru1")
region = Rect2(102, 204, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_yexds"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_usmjv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_erdcl")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wma1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4kit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnsu8")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}],
"loop": true,
"name": &"squash",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eynex"]
radius = 3.0
height = 8.0

[sub_resource type="Gradient" id="Gradient_rainbow"]
offsets = PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 0.65, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0.5, 0, 0.5, 1)

[sub_resource type="Curve" id="Curve_scale_down"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.2), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_7msvu")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
position_smoothing_speed = 1.0
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_yexds")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_eynex")

[node name="JumpSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_brij0")
volume_db = -2.0

[node name="RainbowTrail" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.8
texture = ExtResource("3_particles")
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 50)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
scale_amount_min = 0.5
scale_amount_max = 0.5
scale_amount_curve = SubResource("Curve_scale_down")
color_ramp = SubResource("Gradient_rainbow")

[node name="DiamondTrail" type="CPUParticles2D" parent="."]
emitting = false
amount = 25
lifetime = 0.6
texture = ExtResource("3_particles")
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 30)
initial_velocity_min = 15.0
initial_velocity_max = 30.0
scale_amount_min = 0.4
scale_amount_max = 0.4
scale_amount_curve = SubResource("Curve_scale_down")
color = Color(0.7, 0.9, 1, 1)

[node name="StarParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 1.0
texture = ExtResource("3_particles")
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 10)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
scale_amount_min = 0.3
scale_amount_max = 0.3
color = Color(1, 1, 0.6, 1)
